package exception;

public class LowSoundException extends Exception {
    public LowSoundException(String message){
        super(message);
    }
}
