package humans.interfaces;

import humans.enums.HeadPosition;

public interface Head {
    public void turnHead(HeadPosition position);
}
