package humans.interfaces;

import humans.enums.Direction;

public interface Walk {
    void go(Direction direction);

}
